# src/dto/product_category_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type ProductCategoryAddRequest struct {
+	ProductID  int64 `json:"product_id" validate:"required"`
+	CategoryID int   `json:"category_id" validate:"required"`
+}
