# src/internal/entity/product_category.go
@@ -1,0 +1,7 @@
+package entity
+
+type ProductCategory struct {
+	ID         int64 `db:"id"`
+	ProductID  int64 `db:"product_id"`
+	CategoryID int   `db:"category_id"`
+}
